--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/triptico.css">
+    <title>Bienvenido a esta prueba</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
-<h1> Titulo</h1>
-<p>Hola Mundo<strong>Aqui Estoy</strong></p>
-
+<header>
+    <figure>
+        <img src="assets/img/logo-laboratoria.svg" alt="Logo Laboratoria">
+    </figure>
+    <nav>
+        <ul>
+            <!--li*4>a, es para que salga la lista de 4 elementos-->
+            <li><a href="">inicios</a></li>
+            <li><a href="">servicios</a></li>
+            <li><a href="">premios</a></li>
+            <li><a href="">contactos</a></li>
+        </ul>
+    </nav>
+</header>
+<section>
+<figure>
+    <img src="assets/img/square-laboratoria.png" alt="Logo Laboratoria">
+</figure>
+<h1>Bienvenido a esta prueba</h1>
+<button>conoce mas</button>
+</section>
+<section>
+    
+<div>
+    <span> </span>
+        <h3>SERVICIO MAILING</h3>
+        <p>Entregamos un excelente servicio de mailing para que puedas desarrollar tus campañas de marketing de manera perfecta</p>
+   </div>
+   <div>
+        <span> </span>
+            <h3>SERVICIO DE FOTOGRAFÍA</h3>
+            <p>Entregamos un excelente servicio de fotografía para que puedas desarrollar tus campañas de marketing de manera perfecta.</p>
+       </div>
+       <div>
+            <span> </span>
+                <h3>SERVICIO WEB</h3>
+                <p>Entregamos un excelente servicio de web para que puedas desarrollar tus campañas de marketing de manera perfecta.</p>
+           </div>
+       
+</section>
 </body>
 </html>
