añadiendo estilos al header y section

--- a/index.html
+++ b/index.html
@@ -5,23 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bienvenido a esta prueba</title>
+      
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="assets/icons/icomoon/style.css">
     <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
 <header>
-    <figure>
-        <img src="assets/img/logo-laboratoria.svg" alt="Logo Laboratoria">
+    <figure class="box-header">
+    <img class="logo-header" src="assets/img/logo-laboratoria.svg" alt="Logo Laboratoria">
     </figure>
-    <nav>
+    <nav class="box-header">
         <ul>
             <!--li*4>a, es para que salga la lista de 4 elementos-->
-            <li><a href="">inicios</a></li>
-            <li><a href="">servicios</a></li>
-            <li><a href="">premios</a></li>
-            <li><a href="">contactos</a></li>
+            <li class="text-uppercase"><a href="">inicios</a></li>
+            <li class="text-uppercase"><a href="">servicios</a></li>
+            <li class="text-uppercase"><a href="">premios</a></li>
+            <li class="text-uppercase"><a href="">contactos</a></li>
         </ul>
     </nav>
-</header>
+    </header>
+    
 <section>
 <figure>
     <img src="assets/img/square-laboratoria.png" alt="Logo Laboratoria">
